<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    >

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:background="@color/background_light">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/TextViewProfile"
                    android:text="@string/title_firsname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_fname"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextViewProfile"
                    android:layout_weight="1"
                    android:text="@string/title_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_lname"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/TextViewProfile"
                    android:text="@string/title_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_address"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_weight="1"
                    style="@style/TextViewProfile"
                    android:text="@string/title_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_phone"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/TextViewProfile"
                    android:text="@string/title_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_email"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    style="@style/TextViewProfile"
                    android:layout_weight="1"
                    android:text="@string/title_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/et_edit_password"
                    android:inputType="textPassword"
                    style="@style/EditTextBoxProfile"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>



        </LinearLayout>





    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/profile_buttons"/>


    </RelativeLayout>

</RelativeLayout>